# core2foraws-unit-env-iii

./: CMakeLists.txt  Kconfig  README.md  library.json  unit_env_iii.c
datasheets/: QMP6988.md  SHT30.md  unit-env-iii.md
include/: unit_env_iii.h
